# Island

./: .gitignore  index.html  package-lock.json  package.json  sub.html  vite.config.js  已读未读逻辑.md  歌词获取.md  系统规划.md
src/: App.svelte  SubIsland.svelte  sub-main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: wechat_notify_demo.rs
src-tauri/icons/: icon.icns
src-tauri/src/: album_art.rs  battery.rs  bookmarks.rs  brightness.rs  chrome_focus.rs  cli_watch.rs  event_queue.rs  focus_assist.rs  ide_focus.rs  keyboard_hook.rs  lib.rs  main.rs  media.rs  media_control.rs  netease_cover.rs  netease_local.rs  radios.rs  system_actions.rs  theme.rs  theme_mode.rs  volume.rs  wechat_notifications.rs  wechat_watch.rs  window.rs
src/components/: ChromeFollowBar.svelte  IdeFollowBar.svelte  Island.svelte  MediaCover.svelte
