[package]
name = "island-core"
version = "0.1.0"
description = "IslandCore – Dynamic Island for Windows"
authors = []
edition = "2021"

[lib]
name = "island_core_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
wmi = "0.13"
ureq = { version = "2", features = ["json"] }
urlencoding = "2.1"
rusqlite = { version = "0.32", features = ["bundled"] }

[target.'cfg(windows)'.dependencies]
ddc-winapi = "0.2"
windows = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_UI_Accessibility",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Controls",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_Graphics_Dwm",
  "Win32_UI_Shell",
  "Win32_System_Com",
  "Win32_System_Registry",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Variant",
  "Win32_System_LibraryLoader",
  "Win32_System_Threading",
  "Win32_System_DataExchange",
  "Win32_System_Memory",
  "Win32_System_Power",
  "Win32_Media_Audio",
  "Win32_Media_Audio_Endpoints",
  "Devices_Radios",
  "Foundation_Collections",
  "ApplicationModel",
  "UI_Notifications_Management",
  "Media_Control",
  "Storage_Streams",
] }

[profile.release]                                                                  
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
